--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7"
   },
